compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_equality_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/equality_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × equality operands have different types
   ╭─[tests/fixtures/diagnostics/types/equality_mismatch.ml:2:7]
 1 │ fn main() {
 2 │   dbg("1" == 1)
   ·       ────┬───
   ·           ╰── left side has type `String`, but right side has type `i64`
 3 │ }
   ╰────
  help: compare values with the same type
