compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_function_unsupported_abi.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/function_unsupported_abi.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported function ABI annotation
   ╭─[tests/fixtures/diagnostics/types/function_unsupported_abi.ml:1:16]
 1 │ fn word(value: f64) -> f64 {
   ·                ─┬─
   ·                 ╰── `f64` is not supported for native Riot function parameters or returns yet
 2 │   value
   ╰────
  help: use a scalar type or a boxed value type such as `string`, a tuple, a
        list, or a record
