compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_generic_record_pattern_binding_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1482
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/generic_record_pattern_binding_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × string_concat argument has the wrong type
   ╭─[tests/fixtures/diagnostics/types/generic_record_pattern_binding_mismatch.ml:5:43]
 4 │   match item {
 5 │     box { value: value } -> string_concat(value, "")
   ·                                           ──┬──
   ·                                             ╰── expected `String`, found `i64`
 6 │   }
   ╰────
  help: check the call argument type
