compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_generic_record_pattern_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/generic_record_pattern_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × match pattern has incompatible type
   ╭─[tests/fixtures/diagnostics/types/generic_record_pattern_mismatch.ml:5:18]
 4 │   match item {
 5 │     box { value: "one" } -> "one",
   ·                  ──┬──
   ·                    ╰── pattern has type `String`, but the matched value has type `i64`
 6 │     _ -> "other"
   ╰────
  help: use patterns with the same type as the matched value
