compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_arithmetic_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_arithmetic_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × arithmetic operands must be i64
   ╭─[tests/fixtures/diagnostics/types/inference_arithmetic_operand_mismatch.ml:2:7]
 1 │ fn main() {
 2 │   dbg(1 + true)
   ·       ────┬───
   ·           ╰── this arithmetic expression has type `bool`
 3 │ }
   ╰────
  help: use i64 operands on both sides of this arithmetic expression
